# Solana-Rust-POC

./: flow-test.txt  readme.md
ft_client/: Cargo.toml  owner_list.json
ft_client/src/: main.rs
ft_contract/: Cargo.toml
ft_contract/src/: lib.rs
