[package]
name = "Token-contract"
version = "0.0.1"
description = "Token-contract"
authors = ["Rusted2361 hamzasajid4040@gmail.com"]
license = "Proprietary"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.8.0"
borsh = "0.9.0"
borsh-derive = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
spl-associated-token-account = {version = "1.0.3", features = [ "no-entrypoint" ]}
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "=1.8.0"
solana-sdk = "=1.8.0"

[lib]
name = "Tokens_contract"
crate-type = ["cdylib", "lib"]
